--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "mongodb/mongodb": "^1.0.0",
-        "barryvdh/laravel-debugbar": "^2.3"
+        "barryvdh/laravel-debugbar": "^2.3",
         "laravel/framework": "5.3.*",
         "laravelcollective/html": "5.3.0"
     },
